--- a/index.css
+++ b/index.css
@@ -7,3 +7,9 @@ section {
 section > p {
     font-size: 150%;
 }
+
+@media screen and (max-width: 768px)  {
+    section > p {
+        font-size: 100%;
+    }
+}
