--- a/index.css
+++ b/index.css
@@ -10,6 +10,10 @@ section > p {
 
 @media screen and (max-width: 768px)  {
     section > p {
-        font-size: 100%;
+        font-size: 125%;
+    }
+
+    img {
+        object-fit: contain;
     }
 }
